default email sender updated

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li id="contact">
                     <h1>Contact info</h1>
                     <p>Send me feedback/suggestion/question</p>
-                    <a href="mailto:rheo.tan@gmail.com?subject=Mail from your portfolio">rheo.tan@gmail.com</a>
+                    <a href="mailto:rheo.tan@gmail.com?subject=Mail from Rheo's portfolio">rheo.tan@gmail.com</a>
                 </li>
                 <li><a class="lightbox-img tooltip-img" href="images/myInnercore.jpg" title="Spiritual Being"><img src="images/myInnercore.jpg" /></a></li>
                 <li id="education" class="tooltip-img">
