verbal clean up and lightbox for tooltip

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li class="card card-5">
                     <div class="content">
-                        <h3>I am an anspiring web animation developer. I like to learn more, to share more and to create more through computer programming languages.</h3>
+                        <h3>I am an aspiring web animation developer. I like to learn more, to share more and to create more through computer programming languages.</h3>
                     </div>
                 </li>
             </ul>
@@ -122,10 +122,10 @@
                         with information about the item being hovered over.</p>
                     <ul>
                         <li>
-                            <a href="images/MusicDance2.jpg"><img src="images/MusicDance2.jpg" class="tooltip-img" title="Dance your tears away" /></a>
+                            <a class="lightbox-img tooltip-img" href="images/MusicDance2.jpg"><img src="images/MusicDance2.jpg" class="lightbox-img tooltip-img" title="Dance your tears away" /></a>
                         </li>
                         <li>
-                            <a href="images/MusicDance1.jpg"><img src="images/MusicDance1.jpg" class="tooltip-img" title="I wanna dance with somebody" /></a>
+                            <a class="lightbox-img tooltip-img" href="images/MusicDance1.jpg"><img src="images/MusicDance1.jpg" class="lightbox-img tooltip-img" title="I wanna dance with somebody" /></a>
                         </li>
                     </ul>
                 </div>
